# blog

./: 002-fix-settingwithcopywarning-issue.ipynb  README.md  pyproject.toml
000-001-sort-df-index-before-slicing/: sort-df-index-before-slicing.ipynb
001-sort-df-index-before-slicing/: sort-df-index-before-slicing.ipynb
resources/parquet/: sample-100-yellow_tripdata_2025-09.parquet  sample-1000-yellow_tripdata_2025-09.parquet
src/wise_data_cat/: parquet_sampler.py  parquet_to_postgres.py  parquet_to_postgres_loader.py  simple_converter.py  usage_example.py
