[tool.poetry]
name = "wise-data-cat"
version = "0.1.0"
description = ""
authors = ["Viet Le <vietlq85@gmail.com>"]
readme = "README.md"
packages = [{include = "wise_data_cat"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
