[tool.poetry]
name = "wise-data-cat"
version = "0.1.0"
description = ""
authors = ["Viet Le <vietlq85@gmail.com>"]
readme = "README.md"
packages = [{include = "wise_data_cat"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
pandas = "^2.0.3"
ipython = "^8.14.0"
pyarrow = "~16.0.0"
psycopg2-binary = "^2.9.11"
duckdb = {extras = ["all"], version = "^1.4.2"}
pgcli = "^4.3.0"
connectorx = "^0.4.4"
psycopg = {extras = ["binary"], version = "^3.2.13"}


[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
ruff = "^0.14.7"
pyrefly = "^0.43.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
